--- a/index.html
+++ b/index.html
@@ -10,18 +10,28 @@
     <header id="header">
         <img id="logo" src="./assets/logo iraci.jpg" alt="Iraci">
         <nav id="nav">
-            <button id="bnt">Menu
+            <button id="bnt-mobile">Menu
 
                 <span id="hamburger"></span>
             </button>
             <ul id="menu">
                 <li><a href="/">sobre</a></li>
-                <li><a href="/">Blog</a></li>
-                <li><a href="/">Esportes</a></li>
-                <li><a href="/">Contato</a></li>
+                <li><a href="https://www.instagram.com/pei.iraci.sartori/" target="_blank">blog</a></li>
+                <li><a href="" target="_blank">Esportes</a></li>
+                <li><a href="https://www.canva.com/design/DAFrI4Ppus4/20aehx26issVuV1OEMB5NA/view" target="_blank">Contato</a></li>
             </ul>
         </nav>
     </header>
-    <script src="index.js"></script>
+    <div id="apresentaçao">
+        <img src="./assets/Contato.png" alt="">
+        <div id="setas">
+         <button id="left"><ion-icon name="arrow-back-outline"></ion-icon></button>
+         <button id="right"><ion-icon name="arrow-forward-outline"></ion-icon></button>
+        </div>
+
+    </div>
+    <script src="script.js  "></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
