--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
         </nav>
     </header>
     <div id="apresentaçao">
-        <img src="./assets/Contato.png" alt="">
+        <div id="fotos">
+            <img id="figura" src="contato.png" width="900" height="500">
+            
+        </div>
         <div id="setas">
-         <button id="left"><ion-icon name="arrow-back-outline"></ion-icon></button>
-         <button id="right"><ion-icon name="arrow-forward-outline"></ion-icon></button>
+         <button onclick="trocarImagem()" id="left"><ion-icon name="arrow-back-outline"></ion-icon></button>
+         <button onclick="trocarImagem()" id="right"><ion-icon name="arrow-forward-outline"></ion-icon></button>
         </div>
 
     </div>
