--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
         </div>
 
     </div>
+    <script>
+        var imagens = ["contato.png", "escola.png", "fazenda.png"]; // Lista de caminhos das imagens
+        var indiceAtual = 0; // Índice da imagem atual
+
+  function trocarImagem() {
+      var imagem = document.getElementById("figura");
+      indiceAtual = (indiceAtual + 1) % imagens.length; // Atualiza o índice para a próxima imagem
+      imagem.src = imagens[indiceAtual]; // Define o novo caminho da imagem
+      imagem.alt = "Imagem " + (indiceAtual + 1); // Atualiza o texto alternativo, se necessário
+  }
+    </script>
     <script src="script.js  "></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
