--- a/esporte.html
+++ b/esporte.html
@@ -19,24 +19,14 @@
             </ul>
         </nav>
     </header>
-    <div id="nova">
-        <img id="ns" src="./ping.png" width="70%" height="500px">
-        <div id="fundo"></div>
-        <ul id="esportemenu">
-            <li id="quem"><a href="#campeonato">Nossa historia</a></li>
-            <li id="contatoesporte"><a href="#campeonato">contato</a></li>
-            <li id="campeonatos"><a href="#campeonato">campeonatos</a></li>
-            <li id="jogadores"><a href="#campeonato">jogadores</a></li>
-        </ul>
-    </div>
-
     <div id="campeonato">
+
         <h1> Primeiro campeonato de ping pong</h1>
-    <video src=""></video>
-    <iframe width="786" height="442" src="https://www.youtube.com/embed/NF4yKlBeZk4" title="Campeonato de Ping - Pong entre alunos - Iraci Sartori" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-     <h2>
-        campeonato de ping-pong realizado no ano passado 
-     </h2>
+        
+        <div id="video">
+            <iframe width="786" height="442" src="https://www.youtube.com/embed/NF4yKlBeZk4" title="Campeonato de Ping - Pong entre alunos - Iraci Sartori" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        
     </div>
 
     <script src="script.js  "></script>
