--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <header id="header">
         <img id="logo" src="./assets/logo iraci.jpg" alt="Iraci">
         <nav id="nav">
-            
-            <ul id="menu">
+            <button id="btn-mobile"> Menu </button>
+                <span id="hamburger"></span>
+            <ul id="menu" role="menu">
                 <li><a href="/">sobre</a></li>
                 <li><a href="https://www.instagram.com/pei.iraci.sartori/" target="_blank">blog</a></li>
                 <li><a href="esporte.html">Esportes</a></li>
