--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
         </nav>
     </header>
     <div id="apresentaçao">
+        
         <div id="fotos">
-            <img id="figura" src="contato.png">
+            <img id="figura" src="escola.png">
         </div>
+        <h1 id="texto">escola iraci sartori instituto P.E.I</h1>
+        <h4 id="texto2"> <p>na nossa escola trabalhamos com os nossos alunos varias funcionalides <br></p> </h4>
     </div>
-    <script>
+    <footer>
+        
+    </footer>
+    <script> /*
     function executarAcao() {
     var imagens = ["contato.png", "escola.png", "fazenda.png"]; // Lista de caminhos das imagens
     var indiceAtual = 0; // Índice da imagem atual
@@ -51,7 +57,7 @@
 }
 
 // Iniciar a execução
-executarAcao();
+executarAcao(); */
     </script>
     <script src="script.js  "></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
