--- a/esporte.html
+++ b/esporte.html
@@ -14,7 +14,7 @@
                 <span id="hamburger"></span>
               </button>
             <ul id="menu" role="menu">
-                <li><a href="esporte.html">sobre</a></li>
+                <li><a href="index.html">sobre</a></li>
                 <li><a href="https://www.instagram.com/pei.iraci.sartori/" target="_blank">blog</a></li>
                 <li><a href="esporte.html">Esportes</a></li>
                 <li><a href="https://www.canva.com/design/DAFrI4Ppus4/20aehx26issVuV1OEMB5NA/view" target="_blank">Contato</a></li>
